--- a/src/index.css
+++ b/src/index.css
@@ -20,29 +20,21 @@ a:hover {
   color: inherit;
 }
 
-h2 {
-  text-align: center;
-  font-size: 4.2rem;
-  color: #0c223f;
-  line-height: 1;
-  text-transform: uppercase;
-}
-
 h3 {
   font-size: 1.6rem;
   color: #0c223f;
   font-weight: bold;
   text-align: left;
   padding-bottom: 32px;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 h4 {
   font-size: 1.4rem;
   color: #0c223f;
   text-align: left;
-  padding-bottom: 24px;
-  margin-bottom: 0;
+  padding-bottom: 15px;
+  margin: 0;
 }
 
 button:focus {
