--- a/src/component/TopLink/topLink.scss
+++ b/src/component/TopLink/topLink.scss
@@ -11,7 +11,7 @@
     background-color: #fcfcfc;
     color: #0c223f;
     font-size: 1.8rem;
-
+    border: 0px;
     text-align: center;
     overflow: hidden;
   }
