--- a/src/component/About/about.scss
+++ b/src/component/About/about.scss
@@ -1,4 +1,11 @@
 .about {
+  h5 {
+    padding-bottom: 8px;
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 0;
+  }
+
   margin: 0 16%;
   padding-bottom: 80px;
   font-family: "Oswald", sans-serif;
@@ -17,7 +24,7 @@
   .container {
     position: relative;
     width: 100%;
-    height: 350px;
+    height: auto;
   }
 
   .img {
@@ -30,11 +37,15 @@
     font-size: 1.6rem;
     font-family: "Oswald", sans-serif;
     color: #0c223f;
-    position: absolute;
+    // position: absolute;
     margin: 0;
-    top: 50%;
-    left: 50%;
-    transform: translateY(-50%) translateX(-50%);
+    // top: 50%;
+    // left: 50%;
+    // transform: translateY(-50%) translateX(-50%);
+  }
+  .me_discription > p {
+    margin: 0;
+    padding-bottom: 24px;
   }
 
   .resume_button_container {
