some changes to about section

--- a/src/component/About/about.scss
+++ b/src/component/About/about.scss
@@ -157,7 +157,8 @@
   svg {
     width: 50px;
     display: inline-block;
-    margin-right: 10px;
+
+    padding-bottom: 8px;
     fill: #0c223f;
   }
 }
