--- a/src/component/Menu/menu.scss
+++ b/src/component/Menu/menu.scss
@@ -14,23 +14,23 @@
     height: 56px;
     right: 24px;
     position: fixed;
-    bottom: 24px;
+    top: 24px;
     width: 56px;
     z-index: 999;
   }
 
   /* Styles for the menu */
   .menu {
+    font-family: "Oswald", sans-serif;
     bottom: 0;
     background-color: #0c223f;
-
-    right: -40%;
+    right: -35%;
     margin: 0;
     padding: 32px;
     position: fixed;
     top: 0;
     z-index: 999;
-    width: 40%;
+    width: 35%;
     transform: translate3d(0, 0, 0);
     transition: transform 0.2s linear;
   }
@@ -42,10 +42,10 @@
     color: #fcfcfc;
     font-weight: bold;
     text-align: center;
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
   .menu > ul > li {
-    padding-top: 20px;
+    padding-top: 30px;
   }
 
   /* Creating the hamburger/hotdog icon in CSS */
@@ -86,5 +86,11 @@
 
   .menu--open {
     transform: translate3d(-100%, 0, 0);
+  }
+  @media screen and (max-width: 600px) {
+    .menu {
+      right: -40%;
+      width: 40%;
+    }
   }
 }
