--- a/src/component/Work1/work1.scss
+++ b/src/component/Work1/work1.scss
@@ -30,10 +30,14 @@
     text-align: center;
     font-size: 2rem;
   }
-
+  .hero_container {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+  }
   .hero_img {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
   }
 
@@ -87,6 +91,7 @@
     position: relative;
     margin-right: 10px;
     text-decoration: none;
+    margin-bottom: 10px;
   }
 
   .tag::after {
@@ -175,7 +180,7 @@
   .link_item {
     width: 100%;
     transition-duration: 0.8s;
-    object-fit: contain;
+    object-fit: cover;
   }
 
   .link_text {
@@ -195,6 +200,8 @@
   .link_container::before {
     background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     right: 0;
     bottom: 0;
@@ -212,9 +219,9 @@
     }
   }
   @media screen and (max-width: 768px) and (min-width: 601px) {
-    .tag {
-      margin-bottom: 10px;
-    }
+    // .tag {
+    //   margin-bottom: 10px;
+    // }
   }
   @media screen and (max-width: 600px) {
     .tag {
