--- a/src/component/Menu/menu.scss
+++ b/src/component/Menu/menu.scss
@@ -19,6 +19,46 @@
     z-index: 999;
   }
 
+  .link {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+  }
+  .link::after {
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: #fcfcfc;
+    transform: scale(0, 1);
+    transform-origin: center top;
+    transition: transform 0.3s;
+  }
+  .link:hover::after {
+    transform: scale(1, 1);
+  }
+
+  .linkedin {
+    display: inline-block;
+    font-size: 40px;
+    margin-right: 20px;
+  }
+
+  .github {
+    display: inline-block;
+    font-size: 40px;
+    margin-left: 20px;
+  }
+
+  .github:hover,
+  .linkedin:hover {
+    fill: #ffc41c;
+    transition: 0.5s ease-in-out;
+    -webkit-transition: 0.5s ease-in-out;
+  }
+
   /* Styles for the menu */
   .menu {
     font-family: "Oswald", sans-serif;
@@ -34,11 +74,17 @@
     transform: translate3d(0, 0, 0);
     transition: transform 0.2s linear;
   }
-  .menu > ul {
+
+  .link_sns_container {
+    display: flex;
     position: absolute;
+    flex-direction: column;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateY(-50%) translateX(-50%);
+  }
+
+  .menu > ul {
     color: #fcfcfc;
     font-weight: bold;
     text-align: center;
@@ -87,10 +133,36 @@
   .menu--open {
     transform: translate3d(-100%, 0, 0);
   }
+
+  .sp {
+    display: none;
+  }
   @media screen and (max-width: 600px) {
     .menu {
       right: -40%;
       width: 40%;
+    }
+
+    .linkedin {
+      width: 100%;
+      display: block;
+      font-size: 40px;
+      margin-right: 0;
+    }
+
+    .github {
+      width: 100%;
+      display: block;
+      font-size: 40px;
+      margin-left: 0;
+      margin-top: 30px;
+    }
+
+    .sp {
+      display: block;
+    }
+    .pc {
+      display: none;
     }
   }
 }
