--- a/src/component/WorkCard3/workCard3.scss
+++ b/src/component/WorkCard3/workCard3.scss
@@ -131,7 +131,7 @@
       height: initial;
     }
     .work_contents_main {
-      padding: 16px 0;
+      padding: 16px 0 32px 0;
       position: initial;
       top: initial;
       left: initial;
