--- a/src/component/Top/top.scss
+++ b/src/component/Top/top.scss
@@ -2,6 +2,15 @@
   button:focus {
     outline: 0;
   }
+
+  .logo {
+    width: 50px;
+    position: fixed;
+    z-index: 999;
+    left: 24px;
+    top: 24px;
+    opacity: 0.7;
+  }
   .top_bgc {
     position: relative;
     width: 100vw;
